--- a/style/style.css
+++ b/style/style.css
@@ -3,28 +3,26 @@
   padding: 0;
 }
 
-html {
-  font-family: "Lato", sans-serif;
-}
-
 body {
   background-image: url(/images/Wood.jpg);
   background-size: 200%;
+  font-family: "Lato", sans-serif;
 }
 
 .container {
+  height: 100vh;
   margin-right: auto;
   margin-left: auto;
 }
 
 .header {
-  background: #ad6e5b;
+  width: 100%;
+  background: #e3a28e;
+  text-transform: uppercase;
 }
 
 h1 {
-  font-size: 20px;
   text-align: center;
-  height: 50px;
   line-height: 50px;
   color: blue;
 }
@@ -51,10 +49,212 @@ h1 {
   img {
     width: 15vw;
   }
+
+  .game_platform {
+    display: none;
+  }
 }
 @media screen and (min-width: 701px) {
   .alert {
     display: none;
+  }
+
+  h1 {
+    font-size: 35px;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 10fr;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    grid-template-areas: "header" "game_platform";
+    max-width: 960px;
+  }
+
+  .header {
+    justify-self: center;
+    grid-area: header;
+  }
+
+  .game_platform {
+    display: grid;
+    grid-template-columns: 2fr 1.5fr 2fr;
+    grid-template-rows: 0.8fr 1fr 1.2fr;
+    grid-template-areas: "player_one control_panel player_two" "player_one control_panel player_two" "player_one control_panel player_two";
+    justify-self: stretch;
+    grid-area: game_platform;
+    background: linear-gradient(90deg, #cdc2c2 50%, white 50%);
+    padding: 10px;
+  }
+
+  /* Bandeau central*/
+  .control_panel {
+    grid-template-areas: "new_game" "img_dice" "btn_play_control";
+    grid-area: control_panel;
+  }
+  .control_panel .btn {
+    font-size: 20px;
+  }
+
+  svg {
+    width: 2vw;
+  }
+
+  .new_game {
+    justify-self: center;
+    align-self: start;
+    transform: translateY(30px);
+    grid-area: new_game;
+  }
+
+  .img_dice {
+    justify-self: center;
+    grid-area: img_dice;
+  }
+
+  img {
+    width: 100px;
+  }
+
+  .btn_play_control {
+    grid-template-areas: "roll" "hold";
+    justify-self: center;
+    grid-area: btn_play_control;
+  }
+
+  .roll, .hold {
+    justify-self: center;
+  }
+
+  .roll {
+    align-self: end;
+    grid-area: roll;
+  }
+
+  .hold {
+    grid-area: hold;
+    transform: translateY(20px);
+  }
+
+  /* PLAYER*/
+  .player_one, .player_two, .control_panel {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-auto-columns: 1fr;
+  }
+
+  .player_one, .player_two {
+    justify-self: center;
+  }
+
+  .player_one {
+    grid-template-areas: "player_name1" "score1" "currentbox_1";
+    grid-area: player_one;
+  }
+
+  .player_two {
+    grid-template-areas: "player_name2" "score2" "current_box_2";
+    grid-area: player_two;
+  }
+
+  .player_name1, .player_name2 {
+    justify-self: center;
+    align-self: end;
+    font-size: 60px;
+    text-transform: uppercase;
+  }
+
+  .player_name1 {
+    grid-area: player_name1;
+  }
+
+  .player_name2 {
+    grid-area: player_name2;
+  }
+
+  .score1, .score2 {
+    font-size: 8vw;
+    align-self: flex-start;
+    justify-self: center;
+  }
+
+  .score1 {
+    grid-area: score1;
+  }
+
+  .score2 {
+    grid-area: score2;
+  }
+
+  .current_label {
+    justify-self: center;
+    align-self: center;
+    grid-area: current_label;
+  }
+
+  .currentbox_1, .btn_play_control, .current_box_2 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-auto-columns: 1fr;
+  }
+
+  .currentbox_1, .current_box_2 {
+    align-self: center;
+    justify-self: center;
+    background: rgba(255, 0, 0, 0.617);
+    height: 80px;
+    width: 120px;
+  }
+
+  .currentbox_1 {
+    grid-template-areas: "current_label" "current_score1";
+    grid-area: currentbox_1;
+  }
+
+  .current_box_2 {
+    grid-template-areas: "current_label" "current_score2";
+    grid-area: current_box_2;
+  }
+
+  .current_score1 {
+    grid-area: current_score1;
+  }
+
+  .current_score2 {
+    grid-area: current_score2;
+  }
+
+  .current_score1, .current_score2 {
+    font-size: 25px;
+    color: white;
+    justify-self: center;
+    align-self: start;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .player_name1, .player_name2 {
+    font-size: 40px;
+  }
+
+  .score1, .score2 {
+    font-size: 60px;
+  }
+
+  .current_label {
+    font-size: 16px;
+  }
+
+  .current_score1, .current_score2 {
+    font-size: 20px;
+  }
+
+  .control_panel img {
+    width: 85px;
   }
 }
 
