--- a/style/style.scss
+++ b/style/style.scss
@@ -27,6 +27,8 @@ h1 {
   color: blue;
 }
 
+
+
 @media screen and (max-width: 700px) {
   body {
     background: black;
@@ -41,7 +43,7 @@ h1 {
     margin-top: 15vh;
     /* min-width: 80vw; */
   }
-  .img_alert, .message_alert ,.img_landscape {
+  .img_alert, .message_alert, .img_landscape {
     margin-top: 40px;
   }
 
@@ -73,8 +75,8 @@ h1 {
     grid-template-areas:
       "header"
       "game_platform";
-      max-width: 960px;
-  }
+      max-width: 1400px;
+    }
   
   .header {
     justify-self: center;
@@ -86,12 +88,13 @@ h1 {
     grid-template-columns: 2fr 1.5fr 2fr;
     grid-template-rows: 0.8fr 1fr 1.2fr;
     grid-template-areas:
-      "player_one control_panel player_two"
-      "player_one control_panel player_two"
-      "player_one control_panel player_two";
+      "player_one_control control_panel player_two_control"
+      "player_one_control control_panel player_two_control"
+      "player_one_control control_panel player_two_control";
     justify-self: stretch;
     grid-area: game_platform;
     background: linear-gradient(90deg, rgb(205, 194, 194) 50%, rgb(255, 255, 255) 50%);
+    margin-top: 10px;
     padding: 10px;
   }
   
@@ -100,11 +103,20 @@ h1 {
   .control_panel { 
     grid-template-areas:
       "new_game"
-      "img_dice"
+      "dice"
       "btn_play_control";
     grid-area: control_panel;
-    .btn {
+    
+    
+    button {
+      background: none;
+      border: none;
       font-size: 20px;
+    }
+    
+    i {
+      font-size: 20px;
+      color: red;
     }
   }
   
@@ -118,24 +130,23 @@ h1 {
     grid-area: new_game;
   }
 
-  .img_dice { 
+  .dice { 
     justify-self: center;
-    grid-area: img_dice; 
   }
   img {
-    width: 100px;
+    width: 180px;
   }
 
   .btn_play_control {  
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-auto-columns: 1fr;
     grid-template-areas:
       "roll"
       "hold";
     justify-self: center;
     grid-area: btn_play_control;
-  }
-
-  .roll, .hold {
-    justify-self: center;
   }
 
   .roll {
@@ -150,65 +161,57 @@ h1 {
   
 /* PLAYER*/
 
-  .player_one, .player_two, .control_panel {
+  .active .player_name::after {
+    content: "\2022";
+    font-size: 47px;
+    position: relative;
+    color: #EB4D4D;
+    left: 15px;
+  }
+
+  .player_one_control, .player_two_control, .control_panel {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-auto-columns: 1fr;
   }
 
-  .player_one, .player_two {
+  .player_one_control, .player_two_control {
     justify-self: center;
   }
 
-  .player_one {  
+  .player_one_control {  
     grid-template-areas:
-      "player_name1"
-      "score1"
-      "currentbox_1";
-    grid-area: player_one;
+      "player_name"
+      "player_score"
+      "player_current_box";
+    grid-area: player_one_control;
   }
 
-  .player_two {  
+  .player_two_control {  
     grid-template-areas:
-      "player_name2"
-      "score2"
-      "current_box_2";
-    grid-area: player_two;
+      "player_name"
+      "player_score"
+      "player_current_box";
+    grid-area: player_two_control;
   }
   
-  .player_name1, .player_name2 {
+  .player_name {
     justify-self: center;
     align-self: end;
     font-size: 60px;
     text-transform: uppercase;
   }
 
-  .player_name1 {grid-area: player_name1;}
-  .player_name2 {grid-area: player_name2;}
-    
-  .score1, .score2 {
+  .player_score {
     font-size: 8vw;
+    font-family: "Lato", sans-serif;
+    font-weight: 100;
     align-self: flex-start;
     justify-self: center;
   }
-  .score1 {grid-area: score1;}
-  .score2 {grid-area: score2;}
 
-  .current_label {
-    justify-self: center;
-    align-self: center;
-    grid-area: current_label;
-  }
-
-  .currentbox_1, .btn_play_control, .current_box_2 {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-auto-columns: 1fr;
-  }
-  
-  .currentbox_1, .current_box_2 {
+  .player_current_box {
     align-self: center;
     justify-self: center;
     background: rgba(255, 0, 0, 0.617);
@@ -216,17 +219,9 @@ h1 {
     width: 120px;
   }
 
-  .currentbox_1 {  
-    grid-template-areas:
-      "current_label"
-      "current_score1";
-    grid-area: currentbox_1;
-  }
-  .current_box_2 {  
-    grid-template-areas:
-      "current_label"
-      "current_score2";
-    grid-area: current_box_2;
+  .current_label {
+  text-align: center;
+  grid-area: current_label;
   }
 
   .current_score1 {
@@ -238,14 +233,14 @@ h1 {
   .current_score1, .current_score2 {
     font-size: 25px;
     color: white;
-    justify-self: center;
-    align-self: start;
+    padding-top: 5px;
+    text-align: center;
   }
   
 }
 
-@media screen and (max-width: 1400px) {  
-  .player_name1, .player_name2 {
+@media screen and (max-width: 1200px) {  
+  .player_name {
     font-size: 40px;
   }
   .score1, .score2 {
@@ -260,7 +255,16 @@ h1 {
     font-size: 20px;
   }
 
-  .control_panel {
+  .control_panel { 
+     
+    button {
+      font-size: 15px;
+    }
+    
+    i {
+      font-size: 15px;
+    }
+  
     img {
       width: 85px;
     }
