--- a/style/style.scss
+++ b/style/style.scss
@@ -88,9 +88,9 @@ h1 {
     grid-template-columns: 2fr 1.5fr 2fr;
     grid-template-rows: 0.8fr 1fr 1.2fr;
     grid-template-areas:
-      "player_one_control control_panel player_two_control"
-      "player_one_control control_panel player_two_control"
-      "player_one_control control_panel player_two_control";
+      "player_1_control control_panel player_2_control"
+      "player_1_control control_panel player_2_control"
+      "player_1_control control_panel player_2_control";
     justify-self: stretch;
     grid-area: game_platform;
     background: linear-gradient(90deg, rgb(205, 194, 194) 50%, rgb(255, 255, 255) 50%);
@@ -105,17 +105,18 @@ h1 {
       "new_game"
       "dice"
       "btn_play_control";
+      
     grid-area: control_panel;
     
-    
     button {
+      text-transform: uppercase;
       background: none;
       border: none;
-      font-size: 20px;
+      font-size: 25px;
     }
     
     i {
-      font-size: 20px;
+      font-size: 25px;
       color: red;
     }
   }
@@ -131,8 +132,10 @@ h1 {
   }
 
   .dice { 
+    grid-area: dice;
     justify-self: center;
   }
+
   img {
     width: 180px;
   }
@@ -147,16 +150,20 @@ h1 {
       "hold";
     justify-self: center;
     grid-area: btn_play_control;
+    
   }
 
-  .roll {
-    align-self: end;
+  .btn-roll {
     grid-area: roll;
+    align-self: end;
+    padding-bottom: 20px;
   }
 
-  .hold {
+  .btn-hold {
     grid-area: hold;
-    transform: translateY(20px);
+    align-self: start;
+    padding-top: 20px;
+
   }
   
 /* PLAYER*/
@@ -169,31 +176,31 @@ h1 {
     left: 15px;
   }
 
-  .player_one_control, .player_two_control, .control_panel {
+  .player_1_control, .player_2_control, .control_panel {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 12fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-auto-columns: 1fr;
   }
 
-  .player_one_control, .player_two_control {
+  .player_1_control, .player_2_control {
     justify-self: center;
   }
 
-  .player_one_control {  
+  .player_1_control {  
     grid-template-areas:
       "player_name"
       "player_score"
       "player_current_box";
-    grid-area: player_one_control;
+    grid-area: player_1_control;
   }
 
-  .player_two_control {  
+  .player_2_control {  
     grid-template-areas:
       "player_name"
       "player_score"
       "player_current_box";
-    grid-area: player_two_control;
+    grid-area: player_2_control;
   }
   
   .player_name {
