--- a/style/style.css
+++ b/style/style.css
@@ -84,7 +84,7 @@ h1 {
     display: grid;
     grid-template-columns: 2fr 1.5fr 2fr;
     grid-template-rows: 0.8fr 1fr 1.2fr;
-    grid-template-areas: "player_one_control control_panel player_two_control" "player_one_control control_panel player_two_control" "player_one_control control_panel player_two_control";
+    grid-template-areas: "player_1_control control_panel player_2_control" "player_1_control control_panel player_2_control" "player_1_control control_panel player_2_control";
     justify-self: stretch;
     grid-area: game_platform;
     background: linear-gradient(90deg, #cdc2c2 50%, white 50%);
@@ -138,13 +138,13 @@ h1 {
     grid-area: btn_play_control;
   }
 
-  #btn_roll {
+  .btn-roll {
     grid-area: roll;
     align-self: end;
     padding-bottom: 20px;
   }
 
-  #btn_hold {
+  .btn-hold {
     grid-area: hold;
     align-self: start;
     padding-top: 20px;
@@ -159,25 +159,25 @@ h1 {
     left: 15px;
   }
 
-  .player_one_control, .player_two_control, .control_panel {
+  .player_1_control, .player_2_control, .control_panel {
     display: grid;
     grid-template-columns: 12fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-auto-columns: 1fr;
   }
 
-  .player_one_control, .player_two_control {
+  .player_1_control, .player_2_control {
     justify-self: center;
   }
 
-  .player_one_control {
+  .player_1_control {
     grid-template-areas: "player_name" "player_score" "player_current_box";
-    grid-area: player_one_control;
+    grid-area: player_1_control;
   }
 
-  .player_two_control {
+  .player_2_control {
     grid-template-areas: "player_name" "player_score" "player_current_box";
-    grid-area: player_two_control;
+    grid-area: player_2_control;
   }
 
   .player_name {
