--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*
+/*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
@@ -11103,9 +11103,6 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-
-
-
 * {
   margin: 0;
   padding: 0;
@@ -11345,7 +11342,7 @@ h1, .h1 {
 }
 @media screen and (max-width: 1200px) {
   .player_name {
-    font-size: 40px;
+    font-size: 45px;
   }
 
   .score1, .score2 {
@@ -11361,13 +11358,13 @@ h1, .h1 {
   }
 
   .control_panel button {
-    font-size: 15px;
+    font-size: 23px;
   }
   .control_panel i {
     font-size: 15px;
   }
   .control_panel img {
-    width: 85px;
+    width: 150px;
   }
 }
 
